# Coolcode

./: TaskInCodex.md
BezePlayground/: 0005 对于Skill 和Plugin的安全策略.md  0108 CToolTavilySearchRequest.md  0109 CToolTavilySearchRequest.md  Tokens.md  `ctool_tavily_search_request` 产品大纲 (重构版).md  你好，现在我正在制作一个项目。.md  傻瓜指令.md  傻瓜指令执行规则.md  待办.md  提示词.md  未命名 3.md  通用制作规划.md
codex-rs/: Cargo.toml
codex-rs/utils/ctool/: Cargo.toml
codex-rs/utils/ctool/src/: command_request.rs  command_request_tests.rs  context.rs  error.rs  gate.rs  lib.rs  registry.rs  scope.rs  scope_command.rs  scope_config.rs  scope_context.rs  tool.rs
codex-rs/utils/ctool/src/tools/: mod.rs
codex-rs/utils/ctool/src/tools/command/: ctool_command_request.rs
codex-rs/utils/ctool/src/tools/edit/: ctool_edit_batch.rs  ctool_edit_insert.rs  ctool_edit_replace.rs  ctool_preview_diff.rs  mod.rs
codex-rs/utils/ctool/src/tools/file_ops/: ctool_create_directory.rs  ctool_create_file.rs  ctool_delete_directory.rs  ctool_delete_file.rs  ctool_move_directory.rs  ctool_move_file.rs  mod.rs
codex-rs/utils/ctool/src/tools/read/: ctool_count_matches.rs  ctool_extract_lines_matching.rs  ctool_list_directory.rs  ctool_read_code_range.rs  ctool_read_file.rs  ctool_regex_search.rs  ctool_rg_search.rs  ctool_rg_search_context.rs  ctool_tail_file.rs  mod.rs  search_support.rs
codex-rs/utils/ctool/src/tools/special/: ctool_annotate_markdown.rs  ctool_annotate_markdown_tests.rs  ctool_tavily_search_request.rs  ctool_tavily_search_request_tests.rs  mod.rs
scripts/: format.py
工作区1/: CTool 四层结构 修订.md  CTool 基础类.md  (+9 more)
(+110 files in other folders)
